{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 370,
  "lineage": "be71efd1-2eb6-34a7-3527-23b9e3c4aeaf",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:security-group/sg-04fa5b9c9b64309c9",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fa5b9c9b64309c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS access to EKS API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-eks-cluster-eks-cluster-2025072106400206200000000b",
            "name_prefix": "my-eks-cluster-eks-cluster-",
            "owner_id": "040108639270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-cluster-eks-cluster-sg",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "EKS Cluster Security Group"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-cluster-eks-cluster-sg",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "EKS Cluster Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:security-group/sg-082b8905c9f2e27e5",
            "description": "Security group for EKS node group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-082b8905c9f2e27e5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Communication between nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "my-eks-cluster-eks-node-group-2025072106400153750000000a",
            "name_prefix": "my-eks-cluster-eks-node-group-",
            "owner_id": "040108639270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "my-eks-cluster-eks-node-group-sg",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "EKS Node Group Security Group"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-eks-cluster-eks-node-group-sg",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "EKS Node Group Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_group_from_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Communication with EKS cluster",
            "from_port": 0,
            "id": "sgrule-1407578807",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-082b8905c9f2e27e5",
            "security_group_rule_id": "sgr-0660b3c8ce0918b99",
            "self": false,
            "source_security_group_id": "sg-04fa5b9c9b64309c9",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node_group",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "splunk_forwarder_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": "Splunk forwarder communication",
            "from_port": 9997,
            "id": "sgrule-1281794427",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-082b8905c9f2e27e5",
            "security_group_rule_id": "sgr-0e45b28cda728702f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9997,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.node_group",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "splunk_web_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8"
            ],
            "description": "Splunk management interface",
            "from_port": 8089,
            "id": "sgrule-3674199494",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-082b8905c9f2e27e5",
            "security_group_rule_id": "sgr-0a4941d6b62cf3f63",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8089,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.node_group",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:security-group/sg-0c0f5bfe1978c40fb",
            "description": "Security group for RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0f5bfe1978c40fb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Database access from allowed sources",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev-app-rds-20250721064001534900000009",
            "name_prefix": "dev-app-rds-",
            "owner_id": "040108639270",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-app-rds-sg",
              "Type": "Database Security Group"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-rds-sg",
              "Project": "terraform-project",
              "Type": "Database Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041971f7b1bdeabae",
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:elastic-ip/eipalloc-041971f7b1bdeabae",
            "domain": "vpc",
            "id": "eipalloc-041971f7b1bdeabae",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-127-191.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.127.191",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-nat-eip-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-nat-eip-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d556c854fba4cb6c",
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:elastic-ip/eipalloc-0d556c854fba4cb6c",
            "domain": "vpc",
            "id": "eipalloc-0d556c854fba4cb6c",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-78-109-136.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.109.136",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-nat-eip-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-nat-eip-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:internet-gateway/igw-037392c80d3aed3c6",
            "id": "igw-037392c80d3aed3c6",
            "owner_id": "040108639270",
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-igw",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-igw",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041971f7b1bdeabae",
            "association_id": "eipassoc-03e76ac14ba8232bd",
            "connectivity_type": "public",
            "id": "nat-05e550d06e01cb818",
            "network_interface_id": "eni-0521386134c971362",
            "private_ip": "10.0.1.116",
            "public_ip": "13.209.127.191",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-037c0249d66e06d93",
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-nat-gw-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-nat-gw-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d556c854fba4cb6c",
            "association_id": "eipassoc-0d225fbc44d1ab577",
            "connectivity_type": "public",
            "id": "nat-00e55c9447f2d5aab",
            "network_interface_id": "eni-02a0a0f4d7e41a8a4",
            "private_ip": "10.0.2.71",
            "public_ip": "52.78.109.136",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08ac256abd0cebe36",
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-nat-gw-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-nat-gw-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:route-table/rtb-0ebf695e4abbda124",
            "id": "rtb-0ebf695e4abbda124",
            "owner_id": "040108639270",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-db-rt",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-db-rt",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:route-table/rtb-0d3c47b77c6eaa480",
            "id": "rtb-0d3c47b77c6eaa480",
            "owner_id": "040108639270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e550d06e01cb818",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-private-rt-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-private-rt-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:route-table/rtb-09998f8cc7d1907de",
            "id": "rtb-09998f8cc7d1907de",
            "owner_id": "040108639270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00e55c9447f2d5aab",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-private-rt-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-private-rt-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:route-table/rtb-0fa0498fe9b195a3c",
            "id": "rtb-0fa0498fe9b195a3c",
            "owner_id": "040108639270",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037392c80d3aed3c6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-public-rt",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-public-rt",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfd6c056b783b5ef",
            "route_table_id": "rtb-0ebf695e4abbda124",
            "subnet_id": "subnet-0bea0a864f09464b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0750e357e6376166f",
            "route_table_id": "rtb-0ebf695e4abbda124",
            "subnet_id": "subnet-08b33ea8a9fce1131"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04320f694708bca08",
            "route_table_id": "rtb-0d3c47b77c6eaa480",
            "subnet_id": "subnet-099a55474b4689d62"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cde8ef59763803e7",
            "route_table_id": "rtb-09998f8cc7d1907de",
            "subnet_id": "subnet-0e57d51e8c3e9dd3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eada1e376665aff1",
            "route_table_id": "rtb-0fa0498fe9b195a3c",
            "subnet_id": "subnet-037c0249d66e06d93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05534c84bc123c7e5",
            "route_table_id": "rtb-0fa0498fe9b195a3c",
            "subnet_id": "subnet-08ac256abd0cebe36"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:subnet/subnet-0bea0a864f09464b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bea0a864f09464b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040108639270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-db-subnet-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Data",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-db-subnet-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Data",
              "Type": "Database"
            },
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:subnet/subnet-08b33ea8a9fce1131",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b33ea8a9fce1131",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040108639270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-db-subnet-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Data",
              "Type": "Database"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-db-subnet-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Data",
              "Type": "Database"
            },
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:subnet/subnet-099a55474b4689d62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099a55474b4689d62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040108639270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-private-subnet-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Application",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-private-subnet-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Application",
              "Type": "Private"
            },
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:subnet/subnet-0e57d51e8c3e9dd3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e57d51e8c3e9dd3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "040108639270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-private-subnet-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Application",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-private-subnet-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Application",
              "Type": "Private"
            },
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:subnet/subnet-037c0249d66e06d93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037c0249d66e06d93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040108639270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-public-subnet-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Web",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-public-subnet-1",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Web",
              "Type": "Public"
            },
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:subnet/subnet-08ac256abd0cebe36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ac256abd0cebe36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "040108639270",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-public-subnet-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Web",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-public-subnet-2",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Tier": "Web",
              "Type": "Public"
            },
            "vpc_id": "vpc-0a7bc50d603a8cb2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:040108639270:vpc/vpc-0a7bc50d603a8cb2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0543909ec23a900ba",
            "default_route_table_id": "rtb-0859a3c118729e9c4",
            "default_security_group_id": "sg-0ee46020d597e8be6",
            "dhcp_options_id": "dopt-0a1a526f5a427bf29",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a7bc50d603a8cb2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0859a3c118729e9c4",
            "owner_id": "040108639270",
            "tags": {
              "Environment": "dev",
              "Name": "dev-app-vpc",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Main VPC"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-app-vpc",
              "Owner": "Team2",
              "Project": "security-monitoring",
              "Terraform": "true",
              "Type": "Main VPC"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}